Update USENIX Security Symposium link

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -2,7 +2,7 @@
   headline: "Khwarizmi researchers are taking lead in designing secure and ethical <a href='https://www.umass.edu/news/article/umass-amherst-researchers-join-26-million-quantum-computing-effort-build-internet' target='_blank'>Quantum Internet design <i class='fa fa-external-link'></i></a>."
 
 - date: February 25, 2024
-  headline: "Paper titled ''In Wallet We Trust: Bypassing the Digital Wallets Payment Security for Free Shopping'' accepted at <strong>USENIX Security Symposium 2024</strong>."
+  headline: "Paper titled ''In Wallet We Trust: Bypassing the Digital Wallets Payment Security for Free Shopping'' accepted at <a href='https://www.usenix.org/conference/usenixsecurity24/presentation/anwar' target='_blank'>USENIX Security Symposium 2024</a>."
 
 - date: November 1, 2023
   headline: "Hasnain presented our paper ''Redefining the Driver's Attention Gauge in Semi-Autonomous Vehicles'' at MSWiM 2023 in Montreal, Canada."
