added soups news

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: May 16, 2024
+  headline: "Hasnain's talk on ''Human-in-the-loop for Secure Digital Wallets Transactions'' has been accepted at SOUPS 2024 Lightning Talks."
+
 - date: March 18, 2024
   headline: "Khwarizmi researchers are taking lead in designing secure and ethical <a href='https://www.umass.edu/news/article/umass-amherst-researchers-join-26-million-quantum-computing-effort-build-internet' target='_blank'>Quantum Internet design <i class='fa fa-external-link'></i></a>."
 
