chore: Add news for IEEE MASS 2024 acceptance

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: June 22, 2024
+  headline: "Paper on ''Characterizing Encrypted Application Traffic through Cellular Radio Interface Protocol'' accepted at <a href='https://sites.google.com/view/ieee-mass-2024' target='_blank'>IEEE International Conference on Mobile Ad-Hoc and Smart Systems (MASS 2024)</a>."
+
 - date: May 16, 2024
   headline: "Hasnain's talk on ''Human-in-the-loop for Secure Digital Wallets Transactions'' has been accepted at SOUPS 2024 Lightning Talks."
 
