--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -1,3 +1,12 @@
+- title: "Characterizing Encrypted Application Traffic through Cellular Radio Interface Protocol"
+  year: 2024
+  description: "We empirically demonstrate that 5G radio communication becomes the side channel to precisely infer the user's applications in real-time.  The key idea lies in observing the 5G physical and MAC layer interactions over time that reveal the application's behavior."
+  authors: "Md Ruman Islam, <b>Raja Hasnain Anwar</b>, Spyridon Mastorakis, and <b>Muhammad Taqi Raza</b>"
+  link:
+    url: https://sites.google.com/view/ieee-mass-2024/home
+    display: IEEE International Conference on Mobile Ad-Hoc and Smart Systems (MASS)
+  highlight: 0
+
 - title: "In Wallet We Trust: Bypassing the Digital Wallets Payment Security for Free Shopping"
   year: 2024
   image: payment_arch.png
