--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,3 +1,15 @@
+- title: Presentation @ USENIX'24
+  date: August 13, 2024
+  loc: Philadelphia, Pennsylvania
+  alt: Hasnain presenting our paper "In Wallet We Trust" at the USENIX Security Symposium 2024.
+  image: IMG_9375.jpg
+
+- title: Lightning Talk @ SOUPS'24
+  date: August 13, 2024
+  loc: Philadelphia, Pennsylvania
+  alt: Hasnain delivering a lightning talk on Human-in-the-loop for Secure Digital Wallets Transactions.
+  image: IMG_9341.jpg
+
 - title: CQN Annual Retreat'24
   date: March 22, 2024
   loc: Tucson, Arizona
