--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: August 14, 2024
-  headline: Khwarizmi study reveals <a href='https://www.umass.edu/news/article/new-study-reveals-loophole-digital-wallet-security-even-if-rightful-cardholder-doesnt' target='_blank'>loophole in digital wallet security</a> — even if rightful cardholder does not use a digital wallet!
+  headline: KhwarizmiLab study reveals <a href='https://www.umass.edu/news/article/new-study-reveals-loophole-digital-wallet-security-even-if-rightful-cardholder-doesnt' target='_blank'>loophole in digital wallet security</a> — even if rightful cardholder does not use a digital wallet!
 
 - date: June 22, 2024
   headline: "Paper on ''Characterizing Encrypted Application Traffic through Cellular Radio Interface Protocol'' accepted at <a href='https://sites.google.com/view/ieee-mass-2024' target='_blank'>IEEE International Conference on Mobile Ad-Hoc and Smart Systems (MASS 2024)</a>."
@@ -8,7 +8,7 @@
   headline: "Hasnain's abstract on ''Human-in-the-loop for Secure Digital Wallets Transactions'' has been accepted for SOUPS 2024 Lightning Talks."
 
 - date: March 18, 2024
-  headline: "Khwarizmi researchers are taking lead in designing secure and ethical <a href='https://www.umass.edu/news/article/umass-amherst-researchers-join-26-million-quantum-computing-effort-build-internet' target='_blank'>Quantum Internet design <i class='fa fa-external-link'></i></a>."
+  headline: "Researchers at the KhwarizmiLab are taking lead in designing secure and ethical <a href='https://www.umass.edu/news/article/umass-amherst-researchers-join-26-million-quantum-computing-effort-build-internet' target='_blank'>Quantum Internet design <i class='fa fa-external-link'></i></a>."
 
 - date: February 25, 2024
   headline: "Paper titled ''In Wallet We Trust: Bypassing the Digital Wallets Payment Security for Free Shopping'' accepted at <a href='https://www.usenix.org/conference/usenixsecurity24/presentation/anwar' target='_blank'>USENIX Security Symposium 2024</a>."
