Update alt text for gallery image at USENIX'24 presentation

--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,7 +1,7 @@
 - title: Presentation @ USENIX'24
   date: August 13, 2024
   loc: Philadelphia, Pennsylvania
-  alt: Hasnain presenting our paper "In Wallet We Trust" at the USENIX Security Symposium 2024.
+  alt: Hasnain presenting our paper 'In Wallet We Trust' at the USENIX Security Symposium 2024.
   image: IMG_9375.jpg
 
 - title: Lightning Talk @ SOUPS'24
