--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -7,7 +7,7 @@
 - title: Lightning Talk @ SOUPS'24
   date: August 13, 2024
   loc: Philadelphia, Pennsylvania
-  alt: Hasnain delivering a lightning talk on Human-in-the-loop for Secure Digital Wallets Transactions.
+  alt: Hasnain delivering a lightning talk on 'Human-in-the-loop for Secure Digital Wallets Transactions'.
   image: IMG_9341.jpg
 
 - title: CQN Annual Retreat'24
