Update media page with recent news articles and fix digital wallet security loophole headline

--- a/_data/media.yml
+++ b/_data/media.yml
@@ -1,6 +1,21 @@
-- date: March 18, 2024
-  headline: "<a href='https://www.umass.edu/news/article/new-study-reveals-loophole-digital-wallet-security-even-if-rightful-cardholder-doesnt' target='_blank'>UMass Amherst News</a>: 'New Study Reveals Loophole in Digital Wallet Security—Even If Rightful Cardholder Does Not Use a Digital Wallet'."
+- date: August 20, 2024
+  headline: "<a href='https://www.theregister.com/2024/08/20/digital_wallets_simplify_fraud/' target='_blank'>The Register</a>: Digital wallets can allow purchases with stolen credit cards."
+
+- date: August 20, 2024
+  headline: "<a href='https://www.techzine.eu/news/security/123571/digital-wallets-susceptible-to-stolen-credit-card-fraud/' target='_blank'>TECHZINE</a>: Digital wallets susceptible to stolen credit card fraud."
+
+- date: August 20, 2024
+  headline: "<a href='https://www.newsbytesapp.com/news/science/hackers-can-use-stolen-credit-card-details-on-digital-wallets/story' target='_blank'>NewsBytes</a>: Security flaw allows stolen credit card use on digital wallets."
+
+- date: August 19, 2024
+  headline: "<a href='https://www.helpnetsecurity.com/2024/08/19/digital-wallet-stolen-card/' target='_blank'>Help Net Security</a>: Stolen, locked payment cards can be used with digital wallet apps."
+
+- date: August 14, 2024
+  headline: "<a href='https://techxplore.com/news/2024-08-reveals-loophole-digital-wallet-rightful.html' target='_blank'>Tech Xplore</a>: New Study Reveals Loophole in Digital Wallet Security—Even If Rightful Cardholder Does Not Use a Digital Wallet."
+
+- date: August 14, 2024
+  headline: "<a href='https://www.umass.edu/news/article/new-study-reveals-loophole-digital-wallet-security-even-if-rightful-cardholder-doesnt' target='_blank'>UMass Amherst News</a>: New Study Reveals Loophole in Digital Wallet Security—Even If Rightful Cardholder Does Not Use a Digital Wallet."
 
 - date: March 18, 2024
-  headline: "<a href='https://www.umass.edu/news/article/umass-amherst-researchers-join-26-million-quantum-computing-effort-build-internet' target='_blank'>UMass Amherst News</a>: 'UMass Amherst Researchers Join $26 Million Quantum Computing Effort to Build Internet of the Future'."
+  headline: "<a href='https://www.umass.edu/news/article/umass-amherst-researchers-join-26-million-quantum-computing-effort-build-internet' target='_blank'>UMass Amherst News</a>: UMass Amherst Researchers Join $26 Million Quantum Computing Effort to Build Internet of the Future."
 
