Update media page with recent news articles and fix digital wallet security loophole headline

--- a/_data/media.yml
+++ b/_data/media.yml
@@ -1,3 +1,9 @@
+- date: August 21, 2024
+  headline: "<a href='https://www.pymnts.com/mobile-wallets/2024/5-emerging-security-imperatives-for-digital-wallets/' target='_blank'>PYMNTS</a>: 5 Emerging Security Imperatives for Digital Wallets."
+
+- date: August 21, 2024
+  headline: "<a href='https://www.biometricupdate.com/202408/are-digital-wallets-safe-new-research-says-no' target='_blank'>Biometric Update</a>: Are digital wallets safe? New research says'no'."
+
 - date: August 20, 2024
   headline: "<a href='https://www.theregister.com/2024/08/20/digital_wallets_simplify_fraud/' target='_blank'>The Register</a>: Digital wallets can allow purchases with stolen credit cards."
 
@@ -8,7 +14,13 @@
   headline: "<a href='https://www.newsbytesapp.com/news/science/hackers-can-use-stolen-credit-card-details-on-digital-wallets/story' target='_blank'>NewsBytes</a>: Security flaw allows stolen credit card use on digital wallets."
 
 - date: August 19, 2024
+  headline: "<a href='https://sciencex.com/news/2024-08-week-japanese-ancestry-loophole-digital.html' target='_blank'>Science X</a>: Best of Last Week—Japanese ancestry challenged, loophole in digital wallets, using AI to diagnose genetic disease."
+
+- date: August 19, 2024
   headline: "<a href='https://www.helpnetsecurity.com/2024/08/19/digital-wallet-stolen-card/' target='_blank'>Help Net Security</a>: Stolen, locked payment cards can be used with digital wallet apps."
+
+- date: August 14, 2024
+  headline: "<a href='https://www.eurekalert.org/news-releases/1054622' target='_blank'>EurekaAlert!</a>: New Study Reveals Loophole in Digital Wallet Security—Even If Rightful Cardholder Does Not Use a Digital Wallet."
 
 - date: August 14, 2024
   headline: "<a href='https://techxplore.com/news/2024-08-reveals-loophole-digital-wallet-rightful.html' target='_blank'>Tech Xplore</a>: New Study Reveals Loophole in Digital Wallet Security—Even If Rightful Cardholder Does Not Use a Digital Wallet."
