Update media page with consistent headline formatting

--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,3 +1,9 @@
+- title: ARAthon - ARAFest @ Iowa State University
+  date: August 25, 2024
+  loc: Ames, Iowa
+  alt: Shayan presenting his project on the impact of various weather metrics—such as humidity, temperature, and rain—on 5G channel performance.
+  image: 1724803088833.jfif
+
 - title: Presentation @ USENIX'24
   date: August 13, 2024
   loc: Philadelphia, Pennsylvania
