--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: August 20, 2024
+  headline: Our USENIX paper "In Wallet We Trust" is making headlines! See latest press and media coverage <a href='https://khwarizmilab.github.io/media.html'>here</a>.
+
 - date: August 14, 2024
   headline: KhwarizmiLab study reveals <a href='https://www.umass.edu/news/article/new-study-reveals-loophole-digital-wallet-security-even-if-rightful-cardholder-doesnt' target='_blank'>loophole in digital wallet security</a> — even if rightful cardholder does not use a digital wallet!
 
