Update media page with consistent headline formatting

--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -19,13 +19,13 @@
 - title: CQN Annual Retreat'24
   date: March 22, 2024
   loc: Tucson, Arizona
-  alt: Ali Hamza Malik presenting our work on Quantum protocol security.
+  alt: Ali Hamza presenting our work on Quantum protocol security.
   image: IMG_8481.jpg
 
 - title: Talk @ CQN Annual Retreat'24
   date: March 21, 2024
   loc: Tucson, Arizona
-  alt: Ali Hamza Malik presenting our work on Quantum protocol security.
+  alt: Ali Hamza presenting our work on Quantum protocol security.
   image: IMG_8479.jpg
 
 - title: Thanksgiving 2023
