--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -19,7 +19,7 @@
 - title: CQN Annual Retreat'24
   date: March 22, 2024
   loc: Tucson, Arizona
-  alt: Ali Hamza presenting our work on Quantum protocol security.
+  alt: Poster presentation.
   image: IMG_8481.jpg
 
 - title: Talk @ CQN Annual Retreat'24
