Update news.yml with Abdullah Soomro joining the lab as a PhD student

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: September 11, 2024
+  headline: Abdullah Soomro joins the lab as a PhD student!
+
 - date: August 20, 2024
   headline: Our USENIX paper "In Wallet We Trust" is making headlines! See latest press and media coverage <a href='https://khwarizmilab.github.io/media.html'>here</a>.
 
