--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -63,12 +63,13 @@
   interest4: Theory of Computation
   interest5: VLSI/Hardware Design
 
-- name: "This could be you!!"
-  photo: rock.jpg
-  info: See <a href="https://khwarizmilab.github.io/vacancies">openings</a> for more info.
-  email: taqi_AT_umass.edu
-  number_educ: 0
-  education1:
-  education2:
-  education3:
-  education4:
+- name: Muhammad Abdullah Soomro
+  photo: abdullah.jpg
+  info: PhD Student
+  email: msoomro_AT_umass.edu
+  link: https://soomro-abd.github.io/
+  number_educ: 1
+  education1: BS Computer Science, <a href="https://lums.edu.pk/" target="_blank">Lahore University of Management Sciences, Pakistan</a>. 2022
+  number_rec: 2
+  interest1: 5G in IoT
+  interest2: Time Synchronization
