Update gallery.yml and publist.yml

--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,3 +1,9 @@
+- title: Presentation @ IEEE MASS'24
+  date: September 13, 2024
+  loc: Seoul, South Korea
+  alt: Hasnain presenting our paper on privacy attacks in 5G at IEEE MASS 2024.
+  image: PXL_20240923_064009852~2.jpg
+
 - title: ARAthon - ARAFest @ Iowa State University
   date: August 25, 2024
   loc: Ames, Iowa
