--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -18,7 +18,8 @@
     url: https://arxiv.org/pdf/2407.07361
     display: IEEE International Conference on Mobile Ad-Hoc and Smart Systems (MASS)
     pdf: 2407.07361v2.pdf
-  highlight: 0
+    slides: IEEE_MASSS24.pdf
+  highlight: 1
 
 - title: "A Comprehensive Study on Cyber Attacks in Communication Networks in Water Purification and Distribution Plants: Challenges, Vulnerabilities, and Future Prospects"
   year: 2023
