Update media page with recent news articles and add CNET article

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: December 22, 2024
+  headline: <a href='https://www.cnbc.com/amp/2024/12/22/what-google-quantum-chip-breakthrough-means-for-bitcoins-future.html'>CNBC:</a> Taqi Raza Says Breakthroughs in Quantum Computing Will Likely Transform Industries
+
 - date: September 11, 2024
   headline: Abdullah Soomro joins the lab as a PhD student!
 
